--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
         - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
         - python -m pip install --upgrade pip wheel
         - export PATH="/C/Users/travis/AppData/Roaming/Python/Python37/Scripts:$PATH"
-        - wget http://www.dll-found.com/dll-8d/x/XInput1_4.dll -O C:/Windows/System32/
+        - wget http://www.dll-found.com/dll-8d/x/XInput1_4.dll -O C:/Windows/System32/XInput1_4.dll
       env:
         - CONFIG_TYPE="--config Release"
         - CTEST_CONFIG_TYPE="-C Release"
