--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: cpp
 matrix:
   include:
     - os: osx
-      osx_image: xcode11
+      #osx_image: xcode11
       compiler: clang
     - os: windows
       language: node_js
