--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ addons:
     packages:
       - node
       - python3
-    update: true
+    #update: true
 
 before_script:
   - pip install --user cmake
