--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: install zpm
-      run: npm install -g @zpmpkg/zpm@next
+      run: npm install -g zpmpkg/zpm#alpha
+    - name: download dependencies
+      run: zpm
     - name: make test
       run: make test
