--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,7 +9,7 @@ jobs:
     
     steps:
     - name: prepare
-      run: pip install --upgrade cmake && which pip && pip --version
+      run: pip3 install --upgrade cmake && which pip3 && pip3 --version
     - uses: actions/checkout@v1
     - name: install zpm
       run: sudo npm install -g @zpmpkg/zpm@next
